objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Previous_Industry__c</fullName>
        <label>Account Previous Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Source_Company__c</fullName>
        <description>The account&apos;s associated E1 address source company.  Used in identifying/preventing duplicate accounts.</description>
        <label>Address Source Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Source_Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>This is the E1 Address Type: i.e. CS = Customer Ship To;  CX = Bill To and Ship To are the same; CI = Customer Inactive</description>
        <label>Address Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>For Accounts serviced by an Agent rather than a Direct Salesperson.</description>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Phone__c</fullName>
        <description>Agent Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BigMachines__Partner_Organization__c</fullName>
        <label>Oracle CPQ Cloud Partner Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Latitude__c</fullName>
        <description>Latitude for the billing address.</description>
        <formula>BillingLatitude</formula>
        <inlineHelpText>Latitude for the billing address.</inlineHelpText>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Longitude__c</fullName>
        <description>Longitude for the billing address.</description>
        <formula>BillingLongitude</formula>
        <inlineHelpText>Longitude for the billing address.</inlineHelpText>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billto__c</fullName>
        <externalId>true</externalId>
        <label>Billto #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Branch_Code__c</fullName>
        <description>&quot;AC02&quot; Category code 02 field from E1 Address Book record.  Updated by E1-SF nightly sync.</description>
        <inlineHelpText>&quot;AC02&quot; Category code 02 field from E1 Address Book record.  Updated by E1-SF nightly sync.</inlineHelpText>
        <label>Account Classification-Branch</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code__c</fullName>
        <description>&quot;MCU&quot; Business Unit field from E1 Address Book record. Updated by E1-SF nightly sync.</description>
        <inlineHelpText>The first 3 characters from the long address number.</inlineHelpText>
        <label>Company Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>AC02 Description</description>
        <label>Account Classification Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FME INJECTION</fullName>
                </value>
                <value>
                    <fullName>Injection</fullName>
                </value>
                <value>
                    <fullName>Extrusion</fullName>
                </value>
                <value>
                    <fullName>Blow Molding</fullName>
                </value>
                <value>
                    <fullName>Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Expiration_Date__c</fullName>
        <label>Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_on_File__c</fullName>
        <label>Certification on File?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Business_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Business Classification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Industry_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Industry Classification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>E1 Company Name Description</description>
        <inlineHelpText>E1 Company Name Description</inlineHelpText>
        <label>Company Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plastics Technologies LLC</fullName>
                </value>
                <value>
                    <fullName>Ferromatik Milacron India</fullName>
                </value>
                <value>
                    <fullName>Ferromatik Milacron Germany</fullName>
                </value>
                <value>
                    <fullName>Injection China</fullName>
                </value>
                <value>
                    <fullName>United States/Canada</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Latin/South America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Agency Country</description>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>This is the county of the account location.</inlineHelpText>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Region__c</fullName>
        <formula>TEXT(CreatedBy.Region__c)</formula>
        <label>Created By Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <description>Customer credit status; read-only feed from E1.</description>
        <label>Credit Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <description>Unqualified- Account with no opportunities and no orders (purchase history)
Prospect- new prospective customer with opportunities but no purchasing history 
Existing/Active- current customer with opportunities and/or orders
Idle- No activity on the account in the past 12 months
Inactive- Account location is closed or out of business (can also call this status Closed instead)</description>
        <inlineHelpText>Unqualified-Open with no Activity
Prospect-Quote only/No Purchase History
Existing/Active-Quote and Sales
Idle-No Activity for 12 month
Inactive-Customer Closed or Out of Business</inlineHelpText>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unqualified</fullName>
                    <default>true</default>
                    <label>Unqualified</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Existing/Active</fullName>
                    <label>Existing</label>
                </value>
                <value>
                    <fullName>Idle</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_B_Parent__c</fullName>
        <label>D&amp;B Parent</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETM_Geo_Exceptions__c</fullName>
        <description>This field is used by the ETM process to identify accounts that have exception against standard assignment logic</description>
        <inlineHelpText>The users will input any exceptions to standard account assignment logic for use in the ETM process</inlineHelpText>
        <label>ETM Geo Exceptions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Maquiladora Mexico-Sonora</fullName>
                </value>
                <value>
                    <fullName>Maquiladora Mexico-Chihuahua</fullName>
                </value>
                <value>
                    <fullName>Maquiladora Mexico-Coahuila</fullName>
                </value>
                <value>
                    <fullName>Maquiladora Mexico-Nuevo Leon</fullName>
                </value>
                <value>
                    <fullName>Maquiladora Mexico-Tamaulipas</fullName>
                </value>
                <value>
                    <fullName>Mexico - Key Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
                <value>
                    <fullName>Bad Google Key</fullName>
                </value>
                <value>
                    <fullName>Google Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping</fullName>
                    <default>true</default>
                    <label>Shipping</label>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Do Not Map</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSTIN__c</fullName>
        <description>This field is used to populate GSTIN No.from E1 of India customers which are a unique number of each customer for taxation purpose.</description>
        <label>GSTIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Application_Acc__c</fullName>
        <label>Industry Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Data_com__c</fullName>
        <description>Industry as defined by Data.com</description>
        <inlineHelpText>Industry as defined by Data.com</inlineHelpText>
        <label>Industry - Data.com</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Machine_Purchase_Date__c</fullName>
        <inlineHelpText>This is the last date an order was placed.</inlineHelpText>
        <label>Last Machine Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude_MapAnything__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_MapAnything__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Account_Status__c</fullName>
        <label>New Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reprocess</fullName>
                </value>
                <value>
                    <fullName>Company Match Not Found</fullName>
                </value>
                <value>
                    <fullName>Multiple Company Matches Found</fullName>
                </value>
                <value>
                    <fullName>Company Match Found</fullName>
                </value>
                <value>
                    <fullName>Sync to ERP</fullName>
                </value>
                <value>
                    <fullName>ERP Sync Error</fullName>
                </value>
                <value>
                    <fullName>Multiple Matches in ERP</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <description>Customer Account Open Amount; read-only feed from E1.</description>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Playbook_Work_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Playbook Work Orders attached to this Account that have not yet been Scheduled / Dispatched. Populated by Apex.</description>
        <label>Open Playbook Work Orders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <inlineHelpText>Name of Parent Account in Text</inlineHelpText>
        <label>Parent Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbook_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE if this is a Key Account</description>
        <inlineHelpText>TRUE if this is a Key Account</inlineHelpText>
        <label>Playbook Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbook_Email_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the send of the Open Playbook Work Orders email alert</description>
        <label>Playbook Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Account Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Account regions for the Machinery sales teams.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>ME/Africa</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Germany East</fullName>
                </value>
                <value>
                    <fullName>Germany Middle-West</fullName>
                </value>
                <value>
                    <fullName>Germany North</fullName>
                </value>
                <value>
                    <fullName>Germany South-East</fullName>
                </value>
                <value>
                    <fullName>Germany South-West</fullName>
                </value>
                <value>
                    <fullName>Germany West</fullName>
                </value>
                <value>
                    <fullName>EXPORT SAARC</fullName>
                </value>
                <value>
                    <fullName>EXPORT WEST AFRICA - 2</fullName>
                </value>
                <value>
                    <fullName>EXPORT EAST AFRICA</fullName>
                </value>
                <value>
                    <fullName>EXPORT MIDDLE EAST</fullName>
                </value>
                <value>
                    <fullName>EXPORT SOUTH CENTRAL AFRICA</fullName>
                </value>
                <value>
                    <fullName>EXPORT LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>AHMEDABAD</fullName>
                </value>
                <value>
                    <fullName>EXPORT OMNI</fullName>
                </value>
                <value>
                    <fullName>EXPORT WEST AFRICA - 1</fullName>
                </value>
                <value>
                    <fullName>BLOW MOULDING</fullName>
                </value>
                <value>
                    <fullName>EXPORT AFRICA</fullName>
                </value>
                <value>
                    <fullName>EXPORT ASIA</fullName>
                </value>
                <value>
                    <fullName>EXPORT SAARC- NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>EXPORT WEST AFRICA</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>MUMBAI</fullName>
                </value>
                <value>
                    <fullName>DELHI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Notes__c</fullName>
        <label>Service Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Pricebook__c</fullName>
        <label>Service Pricebook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <label>Service Area / Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Central-South LATAM</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Export Canada</fullName>
                </value>
                <value>
                    <fullName>Export Europe</fullName>
                </value>
                <value>
                    <fullName>Export Far East</fullName>
                </value>
                <value>
                    <fullName>Export-India</fullName>
                </value>
                <value>
                    <fullName>Export Mexico</fullName>
                </value>
                <value>
                    <fullName>Export South America</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Haridwar</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>MilMex</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>North LATAM</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Rio Grande</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Vapi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <label>Ship to Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_ISO_2_Country_Code__c</fullName>
        <label>Shipping ISO-2 Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_ISO_3_Country_Code__c</fullName>
        <label>Shipping ISO-3 Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_ISO_Numeric_Country_Code__c</fullName>
        <label>Shipping ISO-Numeric Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Latitude__c</fullName>
        <description>Latitude for the shipping address.</description>
        <formula>ShippingLatitude</formula>
        <inlineHelpText>Latitude for the shipping address.</inlineHelpText>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Longitude__c</fullName>
        <description>Longitude for the shipping address.</description>
        <formula>ShippingLongitude</formula>
        <inlineHelpText>Longitude for the shipping address.</inlineHelpText>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Requirements_Service__c</fullName>
        <description>Service personnel must comply with customer requirements while working at this site.  The requirements are typically documented by attaching a file to the Account.</description>
        <inlineHelpText>Service personnel must comply with customer requirements while working at this site.  The requirements are typically documented by attaching a file to the Account.</inlineHelpText>
        <label>Site Requirements for Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soldto__c</fullName>
        <externalId>true</externalId>
        <label>Shipto #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Agency State/Province</description>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_Manager__c</fullName>
        <description>select the Strategic Account Manager</description>
        <inlineHelpText>the Strategic Account Manager responsible for this account</inlineHelpText>
        <label>Strategic Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategic_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lisa van der Vorst</fullName>
                </value>
                <value>
                    <fullName>Sylvain Pasquier</fullName>
                </value>
                <value>
                    <fullName>Jason Bonanno</fullName>
                </value>
                <value>
                    <fullName>Kent Royer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Corporate Strategic Account</description>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_AR_1_to_30_Days__c</fullName>
        <description>This defines the total AR value that is 1-30 days past due</description>
        <inlineHelpText>This defines the total AR value that is 1-30 days past due</inlineHelpText>
        <label>Total AR 1 to 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_AR_31_to_60_Days__c</fullName>
        <description>This defines the total AR value that is 31-60 days past due</description>
        <inlineHelpText>This defines the total AR value that is 31-60 days past due</inlineHelpText>
        <label>Total AR 31 to 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_AR_61_to_90_Days__c</fullName>
        <description>This defines the total AR value that is 61-90 days past due</description>
        <inlineHelpText>This defines the total AR value that is 61-90 days past due</inlineHelpText>
        <label>Total AR 61 to 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_AR_Current__c</fullName>
        <description>This is the total value of the AR owed by the customer</description>
        <label>Total AR Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_AR_over_90_Days__c</fullName>
        <description>This defines the total AR value that is over 90 days past due</description>
        <inlineHelpText>This defines the total AR value that is over 90 days past due</inlineHelpText>
        <label>Total AR over 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_1_to_30_Days__c</fullName>
        <description>This defines the total Aftermarket AR value that is 1-30 days past due</description>
        <inlineHelpText>This defines the total Aftermarket AR value that is 1-30 days past due</inlineHelpText>
        <label>Total Aftermarket AR 1 to 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_31_to_60_Days__c</fullName>
        <description>This defines the total Aftermarket AR value that is 31-60 days past due</description>
        <inlineHelpText>This defines the total Aftermarket AR value that is 31-60 days past due</inlineHelpText>
        <label>Total Aftermarket AR 31 to 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_61_to_90_Days__c</fullName>
        <description>This defines the total Aftermarket AR value that is 61-90 days past due</description>
        <inlineHelpText>This defines the total Aftermarket AR value that is 61-90 days past due</inlineHelpText>
        <label>Total Aftermarket AR 61 to 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_Current__c</fullName>
        <description>This defines the total Aftermarket AR that is current for the customer</description>
        <inlineHelpText>This defines the total Aftermarket AR that is current for the customer</inlineHelpText>
        <label>Total Aftermarket AR Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_India__c</fullName>
        <formula>Total_Aftermarket_AR_1_to_30_Days__c + Total_Aftermarket_AR_31_to_60_Days__c + Total_Aftermarket_AR_over_60_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aftermarket AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>